<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.converter.Fluids">

    <TextView android:text="@string/fluidcoverter" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/fluidText"
        android:layout_marginTop="46dp"
        android:layout_alignParentStart="false" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/fluidText"
        android:layout_below="@+id/fluidText"
        android:layout_marginTop="60dp"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:text="@string/floz"
            android:id="@+id/flozsset"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/fluidText"
            android:layout_alignStart="@+id/litersset"
            android:checked="true"
            android:onClick="handleFluidClick"
            android:textSize="30dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liters"
            android:id="@+id/litersset"
            android:layout_marginLeft="0dp"
            android:layout_below="@+id/flozsset"
            android:layout_alignParentStart="true"
            android:layout_marginStart="27dp"
            android:onClick="handleFluidClick"
            android:textSize="30dp" />
    </RadioGroup>
</RelativeLayout>
