<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.converter.Area">

    <TextView android:text="@string/areacoverter" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/areaText"
        android:layout_marginTop="46dp"
        android:layout_alignParentStart="false" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/areaText"
        android:layout_alignRight="@id/areaText"
        android:layout_below="@+id/areaText"
        android:layout_marginTop="60dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqfeet"
            android:id="@+id/sqfeetset"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/areaText"
            android:layout_alignStart="@+id/sqmeterset"
            android:checked="true"
            android:onClick="handleAreaClick"
            android:textSize="30dp" />

        <RadioButton
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:text="@string/sqmeters"
            android:id="@+id/sqmeterset"
            android:layout_marginLeft="0dp"
            android:layout_below="@+id/sqmeterset"
            android:layout_alignParentStart="true"
            android:layout_marginStart="27dp"
            android:onClick="handleAreaClick"
            android:textSize="30dp" />
    </RadioGroup>


</RelativeLayout>
