<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.gatech.seclass.converter.Weight">

    <TextView
        android:text="@string/weightcoverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/weightText"
        android:layout_marginTop="46dp"
        android:layout_alignParentStart="false" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/weightText"
        android:layout_alignRight="@id/weightText"
        android:layout_below="@+id/weightText"
        android:layout_marginTop="60dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pounds"
            android:id="@+id/poundsset"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/weightText"
            android:layout_alignStart="@+id/weightText"
            android:checked="true"
            android:onClick="handleWeightClick"
            android:textSize="30dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilograms"
            android:id="@+id/kilogramsset"
            android:layout_marginLeft="0dp"
            android:layout_below="@+id/poundsset"
            android:layout_alignParentStart="true"
            android:layout_marginStart="27dp"
            android:onClick="handleWeightClick"
            android:textSize="30dp" />
    </RadioGroup>

</RelativeLayout>
